<resources>
    <string name="app_name">eCom</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="Cancel_Text">Cancel</string>
    <string name="network_error">Opps! No internet connection... </string>
    <string name="no_internet_error_msg">There might be a problem in the network connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="select_image">Select image</string>
    <string name="press_back_button_to_exit">Press "Back" again to exit.</string>
    <string name="btn_ok">OK</string>
    <string name="grant_access">You need to grant access</string>
    <string name="msg_permission_setting">You need to grant permissions by going to app setting.</string>
    <string name="SETTINGS">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin_txt">Sign in to access your Orders, Wishlist and Recommendations</string>
    <string name="email_mobile_no">Email/Mobile no.</string>
    <string name="password_txt">Password</string>
    <string name="forgot">forgot password?</string>
    <string name="sign_in_txt">SIGN IN</string>
    <string name="new_to_ecomm_signup">New to eComm? SIGNUP</string>
    <string name="in_91">IN +91  </string>
    <string name="not_recieved_your_code">Not recieved your code?  </string>
    <string name="resend_code">Resend Code</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search_for_product_brands_amp_more"><![CDATA[Search For Product, Brands & More]]></string>
    <string name="recommendations_for_you">Recommendations for you</string>
    <string name="advertisement_txt">Advertisement</string>
    <string name="trending_items_for_you">Trending Items for you</string>
    <string name="deal_of_the_day">Deal of the Day</string>
    <string name="view_all">View All</string>
    <string name="item_in_cart_text">Item in your cart</string>
    <string name="see_all">See All</string>

</resources>
