<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar_signup_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_white"
                android:orientation="vertical"
                tools:context="com.eComm.view.ui.fragments.LogInFragment">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:focusable="false"
                    android:textColorHint="@color/color_blue">

                    <EditText
                        android:id="@+id/input_email_mob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_blue"
                        android:hint="@string/email_mobile_no"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textSize="@dimen/sp_15" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:textColorHint="@color/color_blue">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_blue"
                        android:hint="@string/password_txt"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textSize="@dimen/sp_15" />


                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp15"
                    android:layout_marginTop="@dimen/dp35"
                    android:layout_marginRight="@dimen/dp15"
                    android:background="@drawable/border_signin"
                    android:gravity="center"
                    android:padding="@dimen/dp5"
                    android:text="@string/sign_in_txt"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp15"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp15"
                    android:background="@drawable/border_forget"
                    android:gravity="center"
                    android:padding="@dimen/dp5"
                    android:text="@string/forgot"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_15" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp30"
                    android:layout_marginRight="@dimen/dp30"
                    android:textColor="#092B60"
                    android:textSize="@dimen/sp17" />


                <TextView
                    android:id="@+id/new_to_ecom_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp15"
                    android:layout_marginRight="@dimen/dp15"
                    android:background="@drawable/white_border"
                    android:gravity="center"
                    android:padding="@dimen/dp5"
                    android:text="@string/new_to_ecomm_signup"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/dp14"
                    android:textStyle="bold" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>
